--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -21,9 +21,9 @@ jobs:
         run: |
           pip install pyinstaller
 
-      - name: Build EXE
+      - name: Build Windows EXE (icon + no console)
         run: |
-          pyinstaller --onefile --noconsole create_data.py
+          pyinstaller --onefile --noconsole --icon=xiaomao.ico create_data.py
 
       - name: Upload EXE
         uses: actions/upload-artifact@v4
